feat: initial commit, es-ekspert, es-products

--- a/index.html
+++ b/index.html
@@ -178,11 +178,11 @@
                 </div>
             </div>
 
-            <div class="es-products">
+            <div class="es-products es-section">
 
                 <div class="es-products__left">
                     <div class="es-products__bg">
-                        <img src="./images/products-bg.jpg" />
+                        <img class="es-products__bg__img" src="./images/products-bg.jpg" />
                     </div>
                 </div>
 
@@ -192,33 +192,32 @@
                             <p>Odkryj</p>
                         </div>
                         <p>
-                            inne gamy Mixa
+                            inne gamy Mixa LAB
                         </p>
                     </div>
 
                     <div class="es-products__wrapper">
                         <div class="es-products__single">
-                            <p>Krem przeciw przebarwieniom z&nbsp;witaminą&nbsp;C</p>
+                            <p>Rutyna przeciw niedoskonałościom</p>
                         </div>
                         <div class="es-products__single">
-                            <p>Żel matujący przeciw niedoskonałościom</p>
+                            <p>Rutyna przeciw przesuszeniom</p>
                         </div>
                         <div class="es-products__single">
-                            <p>Krem nawilżający przeciw przesuszeniom SPF50</p>
+                            <p>Rutyna przeciw zaczerwienieniom</p>
                         </div>
                     </div>
                 </div>
 
             </div>
 
-            <div class="es-ekspert">
-                
+            <div class="es-ekspert es-section">
                 <div class="es-ekspert__left">
-                    <img src="./images/ekspert-photo.jpg" alt="" />
+                    <img class="es-ekspert__left__img" src="./images/ekspert-photo.jpg" alt="" />
                 </div>
                 <div class="es-ekspert__right">
                     <div class="es-ekspert__logo">
-                        <img src="./images/mixa-logo.png" alt="Logo Mixa" />
+                        <img class="es-ekspert__logo__img" src="./images/mixa-logo.png" alt="Logo Mixa" />
                     </div>
                     <div class="es-ekspert__wrapper">
                         <div class="es-ekspert__single">
@@ -226,7 +225,7 @@
                                 <img src="./images/icon-glass.png" alt="" />
                             </div>
                             <div>
-                                <p>Testowany pod kontrolą medyczną</p>
+                                <p>Testowane pod kontrolą medyczną</p>
                             </div>
                         </div>
                         <div class="es-ekspert__single">
@@ -242,7 +241,7 @@
                                 <img src="./images/icon-feather.png" alt="" />
                             </div>
                             <div>
-                                <p>Testowany na skórze wrażliwej</p>
+                                <p>Testowane na&nbsp;skórze wrażliwej</p>
                             </div>
                         </div>
                         <div class="es-ekspert__single">
@@ -250,7 +249,7 @@
                                 <img src="./images/icon-drop.png" alt="" />
                             </div>
                             <div>
-                                <p>Hipoalergiczna formuła</p>
+                                <p>Hipoalergiczne formuły</p>
                             </div>
                         </div>
                     </div>
