refactor: es-cross responsive styles

--- a/index.html
+++ b/index.html
@@ -151,8 +151,9 @@
             <div class="es-cross">
                 <div class="es-cross__left">
                     <div class="es-cross__left__wrapper">
-                        <p class="es-cross__left__wrapper__header es-header--bold">Nowa rutyna <span
-                                class="es-header">przeciw zaczerwienieniom</span>
+                        <p class="es-cross__left__wrapper__header es-header"><span class="es-header--bold">Nowa
+                                rutyna </span>przeciw
+                            zaczerwienieniom
                         </p>
                     </div>
                     <div class="es-cross__left__description">
