feat: es-features

--- a/index.html
+++ b/index.html
@@ -42,50 +42,50 @@
                 </div>
             </div>
 
-            <div class="es-features">
-                <div class="es-features__bg">
-                    <picture>
-                        <source media="(max-width:575px)" srcset="./images/stripes-bg.png" />
-                        <img src="./images/feat-bg.jpg" alt="" />
-                    </picture>
+            <div class="es-features es-section">
+                <div class="es-features__left">
+                    <img class="es-features__left__img" src="./images/features.jpg" alt="" />
                 </div>
-                <div class="es-header--bold es-features__title">
-                    <p>Potwierdzona skuteczność</p>
-                </div>
-                <div class="es-features__wrapper">
+                <div class="es-features__right">
+                    <div class="es-header--bold es-features__title">
+                        <p>Potwierdzona skuteczność</p>
+                    </div>
+                    <div class="es-features__wrapper">
+                        <div class="es-features__single">
+                            <div class="es-features__icon">
+                                <img src="./images/check.png" />
+                            </div>
+                            <div class="es-features__text">
+                                <p><strong>-47% </strong>reaktywności skóry w&nbsp;4&nbsp;tygodnie*</p>
+                            </div>
+                        </div>
 
-                    <div class="es-features__single">
-                        <div class="es-features__icon">
-                            <img src="./images/check.png" />
+                        <div class="es-features__single">
+                            <div class="es-features__icon">
+                                <img src="./images/check.png" alt="" />
+                            </div>
+                            <div class="es-features__text">
+                                <p><strong>48h </strong>nawilżenia **</p>
+                            </div>
                         </div>
-                        <div class="es-features__text">
-                            <p>Matowe wykończenie utrzymujące się do 8 godzin<sup>(1)</sup></p>
+
+                        <div class="es-features__single">
+                            <div class="es-features__icon">
+                                <img src="./images/check.png" alt="" />
+                            </div>
+                            <div class="es-features__text">
+                                <p>Skuteczne oczyszczanie bez naruszenia bariery ochronnej skóry</p>
+                            </div>
                         </div>
+
                     </div>
 
-                    <div class="es-features__single">
-                        <div class="es-features__icon">
-                            <img src="./images/check.png" alt="" />
-                        </div>
-                        <div class="es-features__text">
-                            <p>Kontrola wydzielanego sebum<sup>(1)</sup></p>
-                        </div>
+                    <div class="es-features__reference">
+                        <p>*Serum, badanie kliniczne, 43 osoby.</p>
+                        <p>**Krem, test instrumentalny, 24 osoby.</p>
                     </div>
-
-                    <div class="es-features__single">
-                        <div class="es-features__icon">
-                            <img src="./images/check.png" alt="" />
-                        </div>
-                        <div class="es-features__text">
-                            <p>Redukcja niedoskonałości<sup>(1)</sup></p>
-                        </div>
-                    </div>
-
                 </div>
 
-                <div class="es-features__reference">
-                    <p><sup>(1)</sup>Test instrumentalny, 24 osoby.</p>
-                </div>
             </div>
 
             <div class="es-formula">
