--- a/index.html
+++ b/index.html
@@ -15,30 +15,30 @@
     <div id="es-rc">
         <div id="es-rc-content">
 
-            <div class="es-kv">
+            <div class="es-kv es-section">
                 <div class="es-kv__left">
                     <div class="es-kv__logo">
                         <img src="./images/mixa-logo.png" alt="Logo Mixa" />
                     </div>
                     <div class="es-kv__title">
-                        <p class="es-header--bold">Żel matujący</p>
-                        <p class="es-header">przeciw niedoskonałościom</p>
+                        <p class="es-kv__title__p es-header--bold">Rutyna Mixa LAB</p>
+                        <p class="es-kv__title__p es-header--bold">Przeciw zaczerwienieniom</p>
                     </div>
                     <div class="es-kv__textWrapper">
-                        <p class="es-kv__info">Krok 3 Twojej rutyny pielęgnacyjnej</p>
                         <p class="es-kv__text">
-                            Stworzony z myślą o skórze tłustej, mieszanej, skłonnej do trądziku
-                            i&nbsp;z&nbsp;niedoskonałościami.
+                            Stworzony z myślą o skórze reaktywnej, skłonnej do zaczerwienień, wrażliwej
                         </p>
                     </div>
 
                 </div>
-
-                <div class="es-kv__right">
-                    <img src="./images/kv-photo.jpg" alt="" />
+                <div class="es-kv__packshot es-mobile">
+                    <img class="es-kv__packshot__bg" src="./images/kv-mobile.jpg" alt="" />
                 </div>
-                <div class="es-kv__packshot">
-                    <img src="./images/kv-packshot.png" alt="Tubka produktu żel matujący Mixa" />
+                <div class="es-kv__right es-mobile">
+                    <img src="./images/kv-photo.png" alt="" />
+                </div>
+                <div class="es-kv__bg es-desktop">
+                    <img class="es-kv__bg__img" src="./images/kv-desktop.jpg" alt="" />
                 </div>
             </div>
 
